Now terminating all apps.

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title></title>
 </head>
 <body>
-
+<h1>Main window</h1>
+<p>The sub applications should close when the main application closes.</p>
+<button id ="close1">close window 1</button>
 </body>
 </html>
 <script src="js/index.js"></script>
