Now minimizing not closing child windows.

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Main window</h1>
 <p>The sub applications should close when the main application closes.</p>
-<button id ="close1">close window 1</button>
+<button id ="min-btt">minimize</button>
+<button id ="max-btt">maximize</button>
 </body>
 </html>
 <script src="js/index.js"></script>
